[package]
name = "termpasshash"
version = "0.1.0"
authors = ["Cody Bloemhard <cblmhrd@live.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha3 = "0.8.2"
term-basics-linux = "0.5.2"
lapp = "0.4.0"
hex = "0.4.0"
base64 = "0.11.0"
