[package]
name = "termpasshash"
version = "0.1.0"
authors = ["Cody Bloemhard <codybloemhard@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha3 = "0.10.8"
term-basics-linux = "0.5.8"
lapp = "0.4.0"
hex = "0.4.3"
base64 = "0.21.5"
cli-clipboard = "0.4.0"
argon2 = { version = "0.5.2", features = ["std", "zeroize"] }
zen-colour = "1.1.1"
